-[WKWebsiteDataStore fetchDataRecordsOfTypes:completionHandler:] never returns _WKWebsiteDataTypeCredentials https://bugs.webkit.org/show_bug.cgi?id=196991 <rdar://problem/45507423>

Reviewed by Brent Fulgham.

The credentials are stored in the Network process. To enable fetching credentials from the Network process,
a proper process access type needs to be set for the credential Website data type.

* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::computeNetworkProcessAccessTypeForDataFetch):


Canonical link: https://commits.webkit.org/211252@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244365 268f45cc-cd09-0410-ab3c-d52691b4dbfc